
syntax = "proto3";

option go_package = "nocc/pb";

package nocc;

service CompilationService {
    rpc StartClient(StartClientRequest) returns (StartClientReply) {}
    rpc StartCompilationSession(StartCompilationSessionRequest) returns (StartCompilationSessionReply) {}
    rpc UploadFileStream(stream UploadFileChunkRequest) returns (stream UploadFileReply) {}
    rpc RecvCompiledObjStream(OpenReceiveStreamRequest) returns (stream RecvCompiledObjChunkReply) {}
    rpc StopClient(StopClientRequest) returns (StopClientReply) {}
}

message FileMetadata {
    string FileName = 1;
    int64 FileSize = 2;
    fixed64 SHA256_B0_7 = 10;
    fixed64 SHA256_B8_15 = 11;
    fixed64 SHA256_B16_23 = 12;
    fixed64 SHA256_B24_31 = 13;
}

message StartClientRequest {
    string ClientID = 1;
    string ClientVersion = 3;
}

message StartClientReply {
}

message StartCompilationSessionRequest {
    string ClientID = 1;
    uint32 SessionID = 2;
    string Cwd = 3;
    string InputFile = 10;
    string Compiler = 11;
    repeated string CompilerArgs = 12;
    repeated FileMetadata RequiredFiles = 13;
    optional FileMetadata RequiredPchFile = 14;
}

message StartCompilationSessionReply {
    repeated uint32 FileIndexesToUpload = 1;
}

message UploadFileChunkRequest {
    string ClientID = 1;
    uint32 SessionID = 2;
    uint32 FileIndex = 3;
    bytes ChunkBody = 4;
}

message UploadFileReply {
    // empty: when a file uploaded succeeds (in one chunk or in many successive chunks),
    // the server sends just an empty confirmation packet
}

message OpenReceiveStreamRequest {
    string ClientID = 1;
}

message RecvCompiledObjChunkReply {
    uint32 SessionID = 1;
    int32 CompilerExitCode = 2;
    bytes CompilerStdout = 3;
    bytes CompilerStderr = 4;
    int32 CompilerDuration = 5;
    int64 FileSize = 6;
    bytes ChunkBody = 7;
}

message StopClientRequest {
    string ClientID = 1;
}

message StopClientReply {
}
